Giving up on overflow issue for now

--- a/style.css
+++ b/style.css
@@ -53,19 +53,20 @@ header {
 
 	padding: 100px 0px 40px 0px;
 	margin: 0px auto 10px auto;
-	max-width: 600px;
+	max-width: 100vw;
 	z-index: 0;
+	overflow: hidden;
 }
-header::before {
+.octopus {
 	content: '';
 	position: absolute;
-	top: calc(-1100px / 2.8);
-	width: 1100px;
-	height: 1100px;
+	width: 100vw;
+	max-width: 1100px;
+	height: auto;
 	background: url("images/Octopus.svg") no-repeat center center;
 	filter: opacity(20%);
-	transform: rotate(-45deg);
-  z-index: -1;
+	transform: translate(calc(50vw - 50%), -35.75%) rotate(-45deg);
+	z-index: -1;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -134,6 +135,7 @@ section {
 	position: relative;
 	top: 15px;
 	width: 100%;
+	max-width: 600px;
 	padding: 0px 10px;
 	margin: 0px;
 	box-sizing: border-box;
